[package]
name = "fireball"
version = "0.0.1"
authors = [
    "Lawrence Wu <larry.wu@solana.com>",
]
keywords = ["solana"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "fireball"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "~0.19.0"
anchor-spl = "~0.19.0"
solana-program = "~1.9.5"
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version = "~1.1.0", features = [ "no-entrypoint" ] }
